Fix HTML structure and update resume link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         class="close">&times;</span> <h2>My
                         Resume</h2>
                     <iframe
-                        src="Tirupati_Resume.pdf#navpanes=0"
+                        src="Tirupati_Resume (1).pdf#navpanes=0"
                         class="pdf-viewer"></iframe> </div> </div>
             <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -142,3 +142,4 @@
 </script>
 
         </body> </html>
+
