--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             type="image/png" href="favicon.png"> <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         <link rel="stylesheet" href="style.css"> </head> <body> <header> <table>
-                <tr> <td> <img src="neelkanth.jpg" alt="Neelkanth's Photo"
+                <tr> <td> <img src="neelkanth.jpg" alt="Tirupati's Photo"
                             height="200" width="200"> </td> <td> <h1>Tirupati
                             Kishan Mundkar</h1> <p>Clinical Research Analyst <a
                                 href="https://www.tevapharm.com/"
@@ -142,4 +142,5 @@
 </script>
 
         </body> </html>
+
 
